Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-61048

QImageReader::supportedSubTypes returns invalid result

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.9.1
    • 5.7.1, 5.8.0
    • Core: I/O
    • None

    Description

      https://github.com/qt/qtbase/blob/f57322f70e019a252d9846e4b3103b5a28b0d243/src/gui/image/qimagereader.cpp

      line 1122

      QList<QByteArray> QImageReader::supportedSubTypes() const
      {
       if (!d->initHandler())
        return QList<QByteArray>();
       if (!d->handler->supportsOption(QImageIOHandler::SupportedSubTypes))
        return d->handler->option(QImageIOHandler::SupportedSubTypes).value<    QList<QByteArray> >();
       return QList<QByteArray>();
      }
      

      Calls image io handler option(SupportedSubTypes) when this option is NOT supported. (!d->handler->supportsOption)

       

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vgt Eirik Aavitsland
            kusharami Alexandra Cherdantseva
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes