Fix QImageReader::supportedSubTypes()

Because of inverted test logic, this function would always return an
empty list.

Task-number: QTBUG-61048
Change-Id: If1529f2c567069ab4b672f309268b4edaf84c42f
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>